test/functions/hilde/bothKeywords.good
bothKeywords.chpl:2: syntax error: near 'export'
